@@ -1,6 +1,6 @@
 ## -*- mode: R; tab-width: 4; -*-
 ##
-## Copyright (C) 2009 - 2012  Dirk Eddelbuettel and Romain Francois
+## Copyright (C) 2009 - 2013  Dirk Eddelbuettel and Romain Francois
 ##
 ## This file is part of Rcpp.
 ##
@@ -27,20 +27,12 @@
 
 pkg <- "Rcpp"
 
-if ( ! require( "inline", character.only = TRUE, quietly = TRUE ) ){
-    stop( "The inline package is required to run Rcpp unit tests" )
-}
-
-if ( compareVersion( packageDescription( "inline" )[["Version"]], "0.3.4.4" ) < 0 ){
-    stop( "Rcpp unit tests need at least the version 0.3.4.4 of inline" )
-}
-
 if (require("RUnit", quietly = TRUE)) {
 
     is_local <- function(){
-    	if( exists( "argv", globalenv() ) && "--local" %in% argv ) return(TRUE)
-    	if( "--local" %in% commandArgs(TRUE) ) return(TRUE)
-    	FALSE
+        if( exists( "argv", globalenv() ) && "--local" %in% argv ) return(TRUE)
+        if( "--local" %in% commandArgs(TRUE) ) return(TRUE)
+        FALSE
     }
     if (is_local() ) path <- getwd()
 
