@@ -604,65 +604,42 @@ test.List.rep.ctor <- function(){
     checkEquals( res, expected, msg = "List rep constructor" )
 }
 
+if( Rcpp:::capabilities()[["initializer lists"]] ){
 
-# test graveyard. Might come back when we can use C++11
+	test.RawVector.initializer.list <- function(){
+		checkEquals( raw_initializer_list(), as.raw(2*0:3), msg = "RawVector( initializer list) " )
+	}
 
-# if( Rcpp:::capabilities()[["initializer lists"]] ){
-# 	test.RawVector.initializer.list <- function(){
-# 		funx <- raw_initializer_list
-# 		checkEquals( funx(), as.raw(2*0:3), msg = "RawVector( initializer list) " )
-# 	}
-# }
+	test.ComplexVector.initializer.list <- function(){
+		checkEquals( complex_initializer_list(), c( 0:1*(1+1i)), msg = "ComplexVector( initializer list) " )
+	}
 
-# if( Rcpp:::capabilities()[["initializer lists"]] ){
-# 	test.ComplexVector.initializer.list <- function(){
-# 		funx <- complex_initializer_list
-# 		checkEquals( funx(), c( 0:1*(1+1i)), msg = "ComplexVector( initializer list) " )
-# 	}
-# }
+    test.IntegerVector.initializer.list <- function() {
+        checkEquals( integer_initializer_list(), 2*0:3, msg = "IntegerVector( initializer list) " )
+    }
 
-# if (Rcpp:::capabilities()[["initializer lists"]]) {
-#     test.IntegerVector.initializer.list <- function() {
-#         fun <- integer_initializer_list
-#         checkEquals( fun(), 2*0:3, msg = "IntegerVector( initializer list) " )
-#     }
-# }
+	test.NumericVector.initializer.list <- function(){
+		checkEquals( numeric_initlist(), as.numeric(2*0:3), msg = "NumericVector( initializer list) " )
+	}
 
-# if( Rcpp:::capabilities()[["initializer lists"]] ){
-# 	test.NumericVector.initializer.list <- function(){
-# 		funx <- numeric_initlist
-# 		checkEquals( funx(), as.numeric(2*0:3), msg = "NumericVector( initializer list) " )
-# 	}
-# }
+    test.List.initializer.list <- function(){
+        checkEquals( list_initializer_list(), as.list(0:2), 
+            msg = "List( initializer list) " )
+    }
 
-# if( Rcpp:::capabilities()[["initializer lists"]] ){
-#     test.List.initializer.list <- function(){
-#         fun <- list_initializer_list
-#         checkEquals( fun(), as.list(0:2), msg = "List( initializer list) " )
-#     }
-# }
+    test.List.insert <- function(){
+	    d <- list( x = 1:10, y = letters[1:10] )
+	    res <- List_insert( d )
+	    checkEquals( res,
+	        	list( 10L, x = 1:10, y = letters[1:10], foo = "bar" ),
+	        	msg = "List.insert" )
+    }
 
-# test.List.insert <- function(){
-#
-# 	funx <- cxxfunction( signature(x = "list"),
-# 	'
-# 	List list(x) ;
-# 	list.insert( list.begin(), 10 ) ;
-# 	list.insert( list.end(), Named("foo", "bar" ) ) ;
-# 	return list ;
-# 	' , plugin = "Rcpp" )
-# 	d <- list( x = 1:10, y = letters[1:10] )
-# 	res <- funx( d )
-# 	checkEquals( res,
-# 		list( 10L, x = 1:10, y = letters[1:10], foo = "bar" ),
-# 		msg = "List.insert" )
-# }
+    test.CharacterVector.initializer.list <- function() {
+        checkEquals( character_initializer_list(), c("foo","bar"),
+            msg = "CharacterVector( initializer list) " )
+    }
 
-# if (Rcpp:::capabilities()[["initializer lists"]]) {
-#     test.CharacterVector.initializer.list <- function() {
-#         fun <- character_initializer_list
-#         checkEquals( fun(), c("foo","bar"), msg = "CharacterVector( initializer list) " )
-#     }
-# }
+}
 
 }
